# GameboyEMU

./: .gitignore  README.md  meson.build
Doc/: Prezentacija.tex  notes.org
Doc/Atskaite_LaTeX/: PT2_MARIS_MUIZNIEKS_PRAKSE.tex  TITULLAPA.tex
Doc/atskaite/: Prezentacija.tex  prakses_atskaite_mm_pt2.tex
src/: bus.c  bus.h  cart.c  cart.h  cpu.c  cpu.h  cpu_proc.c  cpu_util.c  dbg.c  dbg.h  dma.c  dma.h  include.h  input.c  input.h  instr.c  instr.h  interrupt.c  interrupt.h  io.c  io.h  lcd.c  lcd.h  main.c  meson.build  ppu.c  ppu.h  ppu_pipeline.c  ppu_sm.c  ppu_sm.h  ram.c  ram.h  stack.c  stack.h  timer.c  timer.h  ui.c  ui.h  util.h
