source_files = [ 'main.c', 'cpu.c', 'cpu_proc.c', 'cpu_util.c', 'cart.c', 'ppu.c', 'bus.c', 'timer.c', 'instr.c', 'ram.c', 'stack.c', 'ui.c', 'interrupt.c', 'dbg.c', 'io.c' ]
header_files = [ 'include.h', 'cpu.h', 'cart.h', 'ppu.h', 'bus.h', 'timer.h', 'util.h', 'instr.h', 'ram.h', 'stack.h', 'ui.h', 'interrupt.h', 'dbg.h', 'io.h' ]

sources = files(source_files)
sources += files(header_files)
